feat: 채팅 추천 API 테스트 완료